building the (new) page

--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -1,3 +1,4 @@
+<!-- foods/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,5 +9,6 @@
   <body>
      <%- include('../partials/_navbar.ejs') %>
     <h1>Welcome to my Pantry</h1>
+    <a href="/users/<%= user._id %>/foods/new.ejs">Add New Item</a>
   </body>
 </html>
