--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -9,6 +9,6 @@
   <body>
      <%- include('../partials/_navbar.ejs') %>
     <h1>Welcome to my Pantry</h1>
-    <a href="/users/<%= user._id %>/foods/new.ejs">Add New Item</a>
+    <a href="/users/<%= user._id %>/foods/new">Add New Item</a>
   </body>
 </html>
