--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -10,5 +10,15 @@
      <%- include('../partials/_navbar.ejs') %>
     <h1>Welcome to my Pantry</h1>
     <a href="/users/<%= user._id %>/foods/new">Add New Item</a>
-  </body>
-</html>
+    
+     <% if (pantry && pantry.length) { %>
+     <ul>
+    <% pantry.forEach(function(item){ %>
+     <li><%= item.name %></li>
+    <% }) %>
+     </ul>
+    <% } else { %>
+     <p>There are no items in this pantry.</p>
+    <% } %>
+     </body>
+    </html>
