--- a/views/foods/new.ejs
+++ b/views/foods/new.ejs
@@ -6,7 +6,7 @@
   <title>Add Food</title>
 </head>
 <body>
-  <h1>Add Food Item</h1>
+  <h1>Add Food </h1>
 
   <form action="/users/<%= user._id %>/foods" method="POST">
     <label for="name">Food Name:</label>
