--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -1,32 +1,32 @@
-<!-- foods/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Pantry</title>
-  </head>
-  <body>
-     <%- include('../partials/_navbar.ejs') %>
-    <h1>Welcome to my Pantry</h1>
-    <a href="/users/<%= user._id %>/foods/new">Add New Item</a>
-    
-     <% if (pantry && pantry.length) { %>
-     <ul>
-    <% pantry.forEach(function(food){ %>
-     <li>
-        <%= food.name %>
-         <a href="/users/<%= user._id %>/foods/<%= food._id %>/edit">Edit</a>
-         <form 
-              action="/users/<%= user._id %>/foods/<%= food._id %>?_method=DELETE" 
-              method="POST" >
-              <button type="submit">Delete</button>
-            </form>
-    </li>
-    <% }) %>
-     </ul>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Pantry</title>
+</head>
+<body>
+  <%- include('../partials/_navbar.ejs') %>
+
+  <h1>My Pantry</h1>
+
+  <a href="/users/<%= user._id %>/foods/new">Add New Item</a>
+
+  <% if (foods && foods.length > 0) { %>
+    <ul>
+      <% foods.forEach(food => { %>
+        <li>
+          <%= food.name %>
+          <a href="/users/<%= user._id %>/foods/<%= food._id %>/edit">Edit</a>
+          <form action="/users/<%= user._id %>/foods/<%= food._id %>?_method=DELETE" method="POST" style="display:inline;">
+            <button type="submit">Delete</button>
+          </form>
+        </li>
+      <% }) %>
+    </ul>
     <% } else { %>
-     <p>There are no items in this pantry.</p>
-    <% } %>
-     </body>
-    </html>
+    <p>No items in your pantry yet.</p>
+  <% } %>
+
+</body>
+</html>
