--- a/views/foods/edit.ejs
+++ b/views/foods/edit.ejs
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><meta charset="UTF-8"><title>Edit Food</title></head>
-  <body>
-    <%- include('../partials/_navbar.ejs') %>
-    <h1>Edit Food</h1>
+<head>
+  <meta charset="UTF-8">
+  <title>Edit Item</title>
+</head>
+<body>
+  <%- include('../partials/_navbar.ejs') %>
+  <h1>Edit Pantry Item</h1>
 
-    <form action="/users/<%= user._id %>/foods/<%= food._id %>?_method=PUT" method="POST">
-      <label>Name</label>
-      <input type="text" name="name" value="<%= food.name %>" required>
-      <button type="submit">Save</button>
-    </form>
-
-    <p><a href="/users/<%= user._id %>/foods">Back</a></p>
-  </body>
+  <form action="/users/<%= user._id %>/foods/<%= food._id %>?_method=PUT" method="POST">
+    <label for="name">Food Name:</label>
+    <input type="text" name="name" value="<%= food.name %>" required>
+    <button type="submit">Update</button>
+  </form>
+</body>
 </html>
